syntax = "proto3";

package user;
option go_package = "/protoc";
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message RegistrationRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegistrationResponse {
  string user_id = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  bool success = 2;
  string message = 3;
}

message ResetPasswordRequest {
  string email = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  string reset_token = 1;
  string message = 2;
}

service UserService {
  rpc Register(RegistrationRequest) returns (RegistrationResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
}
